--- a/package.json
+++ b/package.json
@@ -13,19 +13,24 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.2.2",
     "@expo/vector-icons": "^13.0.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~46.0.16",
     "expo-asset": "~8.6.1",
+    "expo-blur": "^11.2.0",
     "expo-constants": "~13.2.4",
     "expo-font": "~10.2.1",
     "expo-linking": "~3.2.2",
-    "expo-splash-screen": "~0.16.2",
+    "expo-splash-screen": "^0.16.2",
     "expo-status-bar": "~1.4.0",
     "expo-system-ui": "~1.3.0",
     "expo-web-browser": "~11.0.0",
+    "lodash.merge": "^4.6.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
@@ -35,6 +40,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/lodash.merge": "^4.6.7",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
     "jest": "^26.6.3",
