--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
-    "@rneui/base": "^4.0.0-rc.7",
-    "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~46.0.16",
     "expo-asset": "~8.6.1",
     "expo-blur": "^11.2.0",
@@ -36,13 +34,15 @@
     "react-native": "0.69.6",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/lodash.merge": "^4.6.7",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
+    "@types/styled-components-react-native": "^5.2.0",
     "jest": "^26.6.3",
     "jest-expo": "~44.0.1",
     "react-test-renderer": "18.0.0",
