--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.2",
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
@@ -28,9 +29,10 @@
     "expo-status-bar": "~1.4.0",
     "expo-system-ui": "~1.3.0",
     "expo-web-browser": "~11.0.0",
-    "lodash.merge": "^4.6.2",
+    "intl": "^1.2.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-intl": "^6.2.1",
     "react-native": "0.69.6",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
@@ -40,7 +42,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/lodash.merge": "^4.6.7",
+    "@types/intl": "^1.2.0",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
     "@types/styled-components-react-native": "^5.2.0",
