--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "axios": "^1.1.3",
     "expo": "~46.0.16",
     "expo-asset": "~8.6.1",
     "expo-blur": "^11.2.0",
-    "expo-constants": "~13.2.4",
+    "expo-constants": "^13.2.4",
     "expo-font": "~10.2.1",
     "expo-linking": "~3.2.2",
     "expo-splash-screen": "^0.16.2",
@@ -47,6 +48,7 @@
     "@types/react-native": "~0.69.1",
     "@types/styled-components-react-native": "^5.2.0",
     "@types/styled-system": "^5.1.15",
+    "dotenv": "^16.0.3",
     "jest": "^26.6.3",
     "jest-expo": "~44.0.1",
     "react-test-renderer": "18.0.0",
