--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-blur": "^11.2.0",
     "expo-constants": "^13.2.4",
     "expo-font": "~10.2.1",
+    "expo-linear-gradient": "~11.4.0",
     "expo-linking": "~3.2.2",
     "expo-splash-screen": "^0.16.2",
     "expo-status-bar": "~1.4.0",
@@ -39,7 +40,8 @@
     "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
     "styled-components": "^5.3.6",
-    "styled-system": "^5.1.5"
+    "styled-system": "^5.1.5",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
